--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
           <div class="skill-row">
             <img class="cpp-img" src="images/ISO_C++_Logo.svg-modified.png" alt="">
             <h3>C++ Programming</h3>
-            <p>Silver Badge at Codechef, 2 star at Hackerrank and good grip on Data Structures and Algorithm using c++.</p>
+            <p>Silver Badge at Codechef, 5 star at Hackerrank and good grip on Data Structures and Algorithm using c++.</p>
           </div>
           <div class="skill-row">
             <img class="dev-img" src="images/png-transparent-web-development-logo-computer-programming-design-trademark-logo-development-modified.png" alt="">
-            <h3>Front-end Development</h3>
-            <p>Several responsive websites in queue. Passionate about solving real world problems using development skills.</p>
+            <h3>Developer</h3>
+            <p>Passionate about solving real world problems using development skills and proficient in HTML,CSS,JavaScript,Reactjs,SQL,MongoDB,JWT,Git and Cloud Fundamentals.</p>
           </div>
         </div>
         <hr>
@@ -49,7 +49,7 @@
           <h3>For more details Download CV and lets connect.</h3>
           <p class="contact-message">Opportunity ? Always up for it <br> Open to work for all developer roles. We can code and bring the change.</p>
           <a class="btn" href="contact.html" target="_blank">Contact Me</a>
-          <a class="btn-2" href="https://drive.google.com/file/d/1q-S9KLX4ECpUQ_EIo9p3JwGDvy8XZlOu/view?usp=drivesdk">Download CV</a>
+          <a class="btn-2" href="https://drive.google.com/file/d/1ju_IxArVW7yV8HUafMOzl9l_-qa2yEq2/view?usp=sharing">Download CV</a>
         </div>
       </div>
       
