--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
     <div class="middle-container">
         <div class="profile">
-          <img src="images/fotor_2023-3-7_0_34_27-modified.png" alt="">
+          <img src="images/Myphoto.jpg" alt="">
           <h2>Hello</h2>
           <p class="intro">A Web Developer and programmer. Pursuing my btech in CSE from VIT BHOPAL. I am An Alpha Microsoft Learn Student Ambassador and strongly believe.."Start with dedication and end with perfection".</p>
          
